--- a/run-ts/src/css/GithubProfileInfo.css
+++ b/run-ts/src/css/GithubProfileInfo.css
@@ -1,37 +1,21 @@
-.GithubUsernameForm {
+.GithubProfileInfo {
     width: 400px;
-    display: flex;
-    align-items: center;
-    height: 32px;
     margin: 0 auto;
-    margin-top: 16px;
-    margin-bottom: 48px;
 }
 
-.GithubUsernameForm input {
-    flex: 1;
-    border: none;
-    outline: none;
-    border-bottom: 1px solid black;
-    font-size: 21px;
-    height: 100%;
+.GithubProfileInfo .profile-head {
+    display: flex;
+    align-items: center;
+}
+
+.GithubProfileInfo .profile-head img {
+    display: block;
+    width: 64px;
+    height: 64px;
+    border-radius: 32px;
     margin-right: 1rem;
 }
 
-.GithubUsernameForm button {
-    background: black;
-    color: white;
-    cursor: pointer;
-    outline: none;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    padding-left: 16px;
-    padding-right: 16px;
-    height: 100%;
+.GithubProfileInfo .profile-head .name {
     font-weight: bold;
-}
-
-.GithubUsernameForm button:hover {
-    background: #495057;
 }
